# cadRenderer

./: CMakeLists.txt  README.md  readme.me  run-withoutCmake.sh  run.sh
asset/: .gitignore  CMakeLists.txt  README.md
asset/data/: .gitignore  captures.rdc
asset/data/JsonData/: CockpitAnimationAction.json  CockpitAnimationState.json  CockpitMaterial.json
asset/data/cameraPose/: vsg_pose.txt
asset/data/fonts/: times.vsgt
asset/data/geos/: 6670.fb  README.txt  Test测试.fb  assembly13.fb  compile.bat  hanjian.fb  luogan.fb  plane.ply  render.fb  renderFlatBuffer.fbs  renderGeo.fbs  test1.fb  test1_652f9af3b5c9782c8ab00f54.json  test2.fb  test2_652fa0d3b5c9782c8ab013cd.json
asset/data/shaders/: RGBtoRGBA.comp  barycentric.frag  clip.frag  clip.vert  computevertex.comp  computevertex.frag  computevertex.vert  computevertex1.comp  computevertex_depthimage.comp  computevertex_depthpyramid.comp  computevertex_shadow.comp  custom_pbr.frag  frag_text.frag  line.frag  line.vert  merge.frag  merge.vert  merge_full_model.frag  merge_objtracking.frag  meshshader.frag  meshshader.mesh  model.frag  new_merge copy.frag  new_merge.frag  new_merge_background.frag  plane.frag  plane.vert  point.frag  point.vert  pointsprites.vert  shader.comp  shader.frag  shader.vert  shader_PushConstants.frag  shader_PushConstants.vert  shadow.frag  simple_miss.rmiss  simple_raygen.rgen  standard_flat_shaded.frag  standard_pbr.frag  (+8 more)
asset/data/shaders/IBL/: custom_pbr.frag  equirect2cube.frag  equirect2cubeMesh.frag.1  genbrdflut.frag  irradiancecube.frag.1  irradiancecubeMesh.frag  prefilterenvmap.frag.1  prefilterenvmapMesh.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  skyboxCubegen.vert  standard.vert
asset/data/textures/: 0.hdr  1.hdr
asset/include/: CADMesh.h  CADMeshIBL.h  ConfigShader.h  CustomViewDependentState.h  CustomViewDependentState1.h  HDRLightSampler.h  IBL.h  IBLv2.h  ImGui.h  ImGui.hpp  ModelInstance.h  MyMask.h  NvDecoder.h  NvEncoder.h  NvEncoderVK.h  OBJLoader.h  PlaneLoader.h  assimp.h  convertPng.h  encoder.h  fixDepth.h  imageUtils.h  json.hpp  renderGeo.fbs  renderGeo_generated.h  screenshot.h  screenshotIBL.h  vsgRenderer.h  vsgRendererClient.h  vsgRendererServer.h
asset/include/global/: typeDefine.h
asset/include/importer/: assimp.h
asset/include/manager/: entityManager.h  renderUnitManager.h
asset/include/math/: Quaternion.h  Raycaster.h
asset/include/model/element/: face.h
asset/include/parser/: protoParser.h
asset/include/refactor/: CADMeshIBL.cpp  EnvironmentLight.cpp  vkhelper.cpp  vkhelper.h
asset/include/render/: renderData.h  renderMerge.h  renderModel.h
asset/include/renderGroup/: renderTemplate.h
asset/include/vsgExt/: CustomGraphicsPipelineConfigurator.cpp  CustomGraphicsPipelineConfigurator.h  CustomViewDependentState.cpp  CustomViewDependentState.h
asset/src/: CADMesh.cpp  CADMeshIBL.cpp  ConfigShader.cpp  CustomViewDependentState.cpp  CustomViewDependentState1.cpp  HDRLightSampler.cpp  IBL.cpp  IBLv2.cpp  ImGui.cpp  ModelInstance.cpp  NvDecoder.cpp  NvEncoder.cpp  NvEncoderCuda.cpp  NvEncoderVK.cpp  OBJLoader.cpp  PlaneLoader.cpp  assimp.cpp  encoder.cpp  fixDepth.cu
include/: Rendering.h  RenderingServer.h
src/: Rendering.cpp  RenderingServer.cpp  main.cpp
